--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ PyJWT==1.7.1
 python-daemon==2.2.4
 python-dotenv==1.0.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 requests==2.22.0
 rsa==4.9
