--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg://python:postgres@localhost:5432/postgres
+sqlalchemy.url = postgresql+psycopg://postgres:postgres@db:5432/fastapi_db
 
 
 [post_write_hooks]
