--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ exceptiongroup==1.2.2
 fastapi==0.115.11
 fastapi-jwt-auth==0.5.0
 filelock==3.0.12
+greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httptools==0.6.4
 idna==2.8
@@ -22,8 +24,11 @@ jose==1.0.0
 lockfile==0.12.2
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
 passlib==1.7.4
 psycopg==3.2.6
+psycopg-binary==3.2.6
+psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.10.6
@@ -40,6 +45,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.39
 starlette==0.46.1
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 urllib3==1.25.11
 uvicorn==0.34.0
