--- a/.env-sample
+++ b/.env-sample
@@ -12,3 +12,4 @@ ACCESS_TOKEN_EXPIRE_MINUTES = 5
 REFRESH_TOKEN_EXPIRE_MINUTES = 1440
 MIN_WORK_HOURS_PER_DAY = 8
 DEFAULT_TIMEZONE = "Asia/Kolkata"
+DOMAIN_NAME = "example.com"
